@@ -16,3 +16,4 @@
 16. Remove "hook_call_deferred(&pd_usb_billboard_deferred_data,	PD_T_AME);"
 17. Remove "#ifdef CONFIG_LOW_POWER_IDLE"
 18. Remove "pd_chipset_*", "#if defined(HAS_TASK_CHIPSET) && defined(CONFIG_USB_PD_DUAL_ROLE)"
+19. "#ifndef CONFIG_USB_PD_SIMPLE_DFP" to "#ifdef CONFIG_USB_PD_SEND_DISCOVER_IDENT"
